--- a/render.yaml
+++ b/render.yaml
@@ -19,7 +19,7 @@ services:
     env: python
     plan: starter
     runtime: python-3.11.9
-    buildCommand: pip install -r requirements.txt
+    buildCommand: pip install --no-cache-dir -r requirements.txt
     startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
     healthCheckPath: /health
     envVars:
