--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ uvicorn[standard]==0.24.0
 python-multipart==0.0.6
 pydantic==2.5.0
 google-generativeai==0.3.2
-sentence-transformers==2.2.2
-faiss-cpu==1.7.4
+sentence-transformers==2.3.1
+faiss-cpu==1.8.0
 pypdf==3.17.4
 python-docx==1.1.0
 requests==2.31.0
@@ -14,3 +14,7 @@ python-jose[cryptography]==3.3.0
 python-dotenv==1.0.0
 aiofiles==23.2.1
 httpx==0.25.2
+torch==2.1.0
+transformers==4.35.0
+scikit-learn==1.3.2
+Pillow>=9.0.0
