Add lightweight vector search fallback for deployment compatibility

--- a/requirements-lite.txt
+++ b/requirements-lite.txt
@@ -22,5 +22,5 @@ python-dotenv==1.0.0
 aiofiles==23.2.1
 httpx==0.25.2
 
-# Note: This version uses scikit-learn's cosine similarity instead of FAISS
+# Note: This version uses scikit-learn's cosine similarity instead of FAISS/torch
 # The code will need minor modifications to use this lightweight setup
