--- a/render.yaml
+++ b/render.yaml
@@ -1,23 +1,13 @@
-# Render deployservices:
-  - type: web
-    name: document-qa-system
-    env: python
-    plan: starter
-    runtime: python-3.11.9
-    buildCommand: pip install --no-cache-dir -r requirements-ultra.txt
-    startCommand: uvicorn main_minimal:app --host 0.0.0.0 --port $PORT
-    healthCheckPath: /healthiguration
+# Render deployment configuration
 # This file is used by Render.com for deployment
 
-# Build command: pip install -r requirements.txt
-# Start command: uvicorn main:app --host 0.0.0.0 --port $PORT
+# Build command: pip install --no-cache-dir -r requirements-ultra.txt
+# Start command: uvicorn main_minimal:app --host 0.0.0.0 --port $PORT
 
 # Environment variables to set in Render dashboard:
 # - GEMINI_API_KEY: Your Google Gemini API key
 # - BEARER_TOKEN: Secure token for API authentication
-# - API_SECRET_KEY: Secret key for JWT tokens
 # - ENVIRONMENT: production
-# - LOG_LEVEL: INFO
 
 version: 2
 
@@ -27,25 +17,17 @@ services:
     env: python
     plan: starter
     runtime: python-3.11.9
-    buildCommand: pip install --no-cache-dir -r requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port $PORT
+    buildCommand: pip install --no-cache-dir -r requirements-ultra.txt
+    startCommand: uvicorn main_minimal:app --host 0.0.0.0 --port $PORT
     healthCheckPath: /health
     envVars:
       - key: ENVIRONMENT
         value: production
-      - key: LOG_LEVEL
-        value: INFO
+      - key: GEMINI_API_KEY
+        sync: false  # Set this manually in Render dashboard
+      - key: BEARER_TOKEN
+        value: your-secure-bearer-token-here
       - key: MAX_CHUNK_SIZE
-        value: 1000
-      - key: CHUNK_OVERLAP
-        value: 200
+        value: 2000
       - key: TOP_K_RESULTS
         value: 5
-      - key: MODEL_NAME
-        value: gpt-4
-      - key: EMBEDDING_MODEL
-        value: sentence-transformers/all-MiniLM-L6-v2
-      - key: MAX_DOCUMENTS
-        value: 10
-      - key: MAX_QUESTIONS
-        value: 20
